style.css
body{
        background-color: white;
}

.btn{
    display: inline-block;
    outline: 0;
    cursor: pointer;
    text-align: center;
    border: 1px solid #babfc3;
    padding: 7px 16px;
    min-height: 36px;
    min-width: 36px;
    color: #202223;
    background: #ffffff;
    border-radius: 4px;
    font-weight: 500;
    font-size: 14px;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px;
}
.btn:hover{
    background: #f6f6f7;
    outline: 1px solid transparent;
}

.styled-table {
    border-collapse: collapse;
    margin: 25px 0;
    font-size: 0.9em;
    font-family: sans-serif;
    min-width: 400px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}
.styled-table thead tr {
    background-color: #009879;
    color: #ffffff;
    text-align: left;
}
.styled-table th,
.styled-table td {
    padding: 12px 15px;
}
.styled-table tbody tr {
    border-bottom: 1px solid #dddddd;
}

.styled-table tbody tr:nth-of-type(even) {
    background-color: #f3f3f3;
}

.styled-table tbody tr:last-of-type {
    border-bottom: 2px solid #009879;
}


@media only screen and (max-width: 600px){
    .btn {
        font-size: 16px;
        margin: 6px;
    }
    .styled-table {
        min-width: none;
    }
}

